Fix text overflow issues with forms CPT title

--- a/assets/sass/admin-forms.scss
+++ b/assets/sass/admin-forms.scss
@@ -93,3 +93,13 @@ button.cmb-remove-group-row {
 #cmb2-metabox-ctct_fields_metabox h3.cmb-group-title.cmbhandle-title {
 	padding-left: 1em;
 }
+
+body.post-type-ctct_forms #titlediv #title {
+	height: 2.7em;
+}
+.ctct-admin-title-details {
+	font-size: .6em;
+	vertical-align: middle;
+	display: block;
+	line-height: 2em;
+}
